# QuantAgent

./: .dockerignore  .env.example  .gitignore  .oxfmtrc.json  .oxlintrc.json  .pr_body_issue190.md  .tmp-pr-body-issue-169.md  AGENTS.md  DESIGN.md  Dockerfile  README.md  docker-compose.yml  package.json  pyproject.toml  turbo.json
apps/api/: .env.example  .env.local.example  .env.production.example  .env.staging.example  .env.test.example  AGENTS.md  README.md  pyproject.toml
apps/api/quantagent_api/: exceptions.py  main.py
apps/api/quantagent_api/config/: settings.py
apps/api/quantagent_api/routers/: debug.py  health.py
apps/api/src/quantagent/api/: __init__.py  auth.py  db.py  errors.py  exceptions.py  main.py  middleware.py  responses.py
apps/api/src/quantagent/api/auth/: __init__.py  actor.py  audit.py  capability.py  csrf.py  session.py
apps/api/src/quantagent/api/config/: settings.py
apps/api/src/quantagent/api/demo/: __init__.py  discord_approval_smoke.py
apps/api/src/quantagent/api/http/: __init__.py  errors.py  exceptions.py  middleware.py  responses.py
apps/api/src/quantagent/api/observability/: README.md  __init__.py  context.py  events.py  files.py  filters.py  formatters.py  logging.py  maintenance.py  queue.py
apps/api/src/quantagent/api/providers/: __init__.py  version.py
apps/api/src/quantagent/api/routers/: __init__.py  auth.py  debug.py  health.py  register.py  version.py
apps/api/src/quantagent/api/schemas/: __init__.py  agent_chat.py  (+14 more)
apps/api/src/tests/: alpaca_wallet_api_e2e_support.py  test_action_submission_and_ingress.py  test_agent_chat_runtime_config.py  test_agent_debug_service.py  test_alpaca_wallet_api_e2e.py  test_alpaca_wallet_api_e2e_support.py  test_app.py  test_discord_approval_smoke_demo.py  test_main.py  test_observability.py
apps/api/tests/: test_app.py
apps/scheduler/: AGENTS.md  README.md  pyproject.toml
apps/scheduler/src/quantagent/scheduler/: __init__.py  main.py
apps/scheduler/src/tests/: test_scheduler_main.py
apps/worker/: AGENTS.md  README.md  pyproject.toml
apps/worker/src/quantagent/worker/: __init__.py  main.py
apps/worker/src/tests/: test_agent_action_approval_discord_loop_smoke.py  test_analysis_request_handler.py  test_approval_notification_handlers.py  test_captured_event_handler.py  test_routed_agent_run_handler.py  test_worker_main.py
(+1191 files in other folders)
