[project]
name = "quantagent_api"
version = "0.1.0"
description = "QuantAgent API service"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.136.1",
    "pydantic-settings>=2.14.1",
]

[project.scripts]
api = "quantagent.api.main:run"

[tool.uv.build-backend]
module-root = "src"
module-name = "quantagent.api"

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"
