[project]
name = "quantagent_scheduler"
version = "0.1.0"
description = "QuantAgent scheduler entrypoint"
requires-python = ">=3.11"
dependencies = [
    "quantagent-core",
]

[project.scripts]
quantagent-scheduler = "quantagent.scheduler.main:run"

[tool.uv.sources]
quantagent-core = { workspace = true }

[tool.uv.build-backend]
module-root = "src"
module-name = "quantagent.scheduler"

[build-system]
requires = ["uv_build>=0.11.14,<0.12"]
build-backend = "uv_build"
